--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Andy Savage <andy@savage.hk> (http://andy.savage.hk)",
-  "license": "SEE LICENSE IN License.txt",
+  "license": "MIT",
   "dependencies": {
     "optimist": "^0.6.1",
     "redis": "^2.4.2"
